# symforce

./: CMakeLists.txt  Makefile  README.md  setup.py
.doctrees/nbsphinx/tutorials/: epsilon_tutorial.ipynb  ops_tutorial.ipynb  values_tutorial.ipynb
.doctrees/tutorials/: codegen_tutorial.doctree  geometry_tutorial.doctree
.github/workflows/: build_and_test.yml  check-versions.yml  ci.yml  docs.yml  pip3-ubuntu-build.yml  run_tests.yml  test_editable_pip_install.yml  try-building-2.yml  try-building.yml  which-dir.yml
symforce/: __init__.py  jacobian_helpers.py
symforce/codegen/: codegen.py  codegen_util.py  geo_factors_codegen.py  geo_package_codegen.py
symforce/codegen/backends/python/: python_config.py
symforce/examples/: CMakeLists.txt
symforce/examples/investigate_opt/: CMakeLists.txt  main.cc
symforce/internal/: symbolic.py
symforce/opt/: factor.tcc
symforce/opt/internal/: factor_utils.h
symforce/slam/: CMakeLists.txt
symforce/slam/imu_preintegration/: generate_manifold.py  imu_factor.cc  imu_factor.h  manifold_symbolic_pim.py  preintegrated_imu_measurements.cc  preintegrated_imu_measurements.h  symbolic.py  symbolic_imu_residual.py
test/: geo_package_python_test.py  slam_manifold_preintegration_update_test.cc  symforce_codegen_test.py  symforce_gen_codegen_test.py
test/symforce_function_codegen_test_data/symengine/with_jacobians/: compose_pose3_jacobian0.h  (+5 more)
tutorials/: cameras_tutorial.ipynb  codegen_tutorial.html  codegen_tutorial.ipynb  epsilon_tutorial.html  geometry_tutorial.html  geometry_tutorial.ipynb  sympy_tutorial.ipynb
(+14 files in other folders)
